		 even though the type was registered explicitly. (Work item 20272).
		-[Core] RegisterOpenGeneric could fail because it would try to apply an incompatible implementation,
		 because the generic type constraints weren't always validated correctly.
		-[Core] Registration of variant types with RegisterAll failed (Work item 20366).
	
				
Version 2.3.5 (v2.3.5 RTM) 2013-09-02

	General description:
		This patch release fixes a minor bug the Integration.LifetimeScoping package and fixes versioning
		problems caused by release 2.3.4.

	Bug fixes:
		[LifetimeScoping] Making a registration using RegisterOpenGeneric and the lifetime scope lifestyle,
		without explicitly enabling lifetime scoping using EnableLifetimeScoping, led to a uninformative
		exception, hiding the real problem. (work item 20162).


Version 2.3.2 (v2.3.2 RTM) 2013-08-31

	General description:
		This patch release fixes a few minor bugs in the Core library and one in the MVC integration library.

	Bug fixes:
		-[Integration.Mvc] The SimpleInjectorDependencyResolver will now throw a descriptive exception when
		 an unregistered controller can't be created (for whatever reason) instead of allowing null to be
		 returned, since this causes MVC to throw a non-descriptive "Make sure that the controller has a 
		 parameterless public constructor" exception, hiding the real cause. (work item 20097).
		-[Core] Diagnostic Services incorrectly reported a 'potential lifetime mismatch' warning
		 when a singleton decorator depended on a Func<T> where T was the decorated type. (work item 20141)
		-[Core] Calls to GetRegistration did not throw an exception that was as expressive as call to
		 GetInstance. (work item 20155).
		-[Core] Improved the exception message when a decorator registration is done with a type that can not
		 be used as decorator. (work item 20047).
		
		
Version 2.3.1 (v2.3.1 RTM)  2013-07-12

	General description: